<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="orin_nano@todo.todo">orin_nano</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <buildtool_depend>message_generation</buildtool_depend>
    <exec_depend>message_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
